fixed z-index

--- a/invite/src/css/HomePage.css
+++ b/invite/src/css/HomePage.css
@@ -31,9 +31,9 @@
 }
 
 .homepageText {
-  position: relative;
+  position: absolute;
   color: white;
-  z-index: 2;
+  z-index: auto;
   opacity: 1;
 }
 
